crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__slot_dir-3.snap
---
source: crates/compiler/tests/parser_test/mod.rs
expression: "<p #@_@=\"tt\"/>"

---
Dir:
  name: slot
  argument:
    Static: "@_@"
  modifiers: []
  expression:
    content: tt
    location:
      start: "Pos: 8, Ln: 1, Col: 9"
      end: "Pos: 12, Ln: 1, Col: 13"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 7, Ln: 1, Col: 8"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 12, Ln: 1, Col: 13"

